# audio-player

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cpp-player.cpp  cpp-player.h  globals.cpp  globals.h  install-depend  m4a-mp3.sh  main.cpp  run
convert/: flac-mp3.sh  wav-mp3.sh
src/: args.cpp  args.h  cpp-player.cpp  cpp-player.h  globals.cpp  globals.h  main.cpp  signals.cpp  signals.h
